--- a/manifest.json
+++ b/manifest.json
@@ -12,9 +12,7 @@
         "service_worker": "background.js"
       },
       "icons": {
-        "16": "icons/icon16.png",
-        "48": "icons/icon48.png",
-        "128": "icons/icon128.png"
+        "512": "icons/music-services-search-icon.png"
       },
       "options_page": "options.html",
       "author": "Aurélien Goulet"
