--- a/manifest.json
+++ b/manifest.json
@@ -9,12 +9,32 @@
     "service_worker": "background.js"
   },
   "icons": {
+    "16": "icons/music-services-search-icon-16.png",
+    "32": "icons/music-services-search-icon-32.png",
+    "48": "icons/music-services-search-icon-48.png",
+    "128": "icons/music-services-search-icon-128.png",
     "512": "icons/music-services-search-icon.png"
   },
-  "options_page": "options.html",
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "icons/music-services-search-icon-16.png",
+      "32": "icons/music-services-search-icon-32.png",
+      "48": "icons/music-services-search-icon-48.png",
+      "128": "icons/music-services-search-icon-128.png"
+    },
+    "default_title": "__MSG_extensionName__"
+  },
+  "options_ui": {
+    "page": "popup.html",
+    "open_in_tab": false
+  },
   "author": "Aurélien Goulet",
-  "privacy_policy_url": "https://yourdomain.com/privacy-policy.html",
+  "privacy_policy_url": "https://raw.githubusercontent.com/elektrorl/music-services-search/refs/heads/main/privacy-policy.html",
+  "bug_report_url": "https://github.com/elektrorl/music-services-search/issues",
+  "homepage_url": "https://github.com/elektrorl/music-services-search",
+  "minimum_chrome_version": "88",
   "content_security_policy": {
-    "extension_pages": "script-src 'self'; object-src 'self'; style-src 'self' https://fonts.googleapis.com; font-src https://fonts.gstatic.com"
+    "extension_pages": "script-src 'self'; object-src 'self'; style-src 'self' https://fonts.googleapis.com; font-src https://fonts.gstatic.com; default-src 'self'"
   }
 }
